k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subtrack
spec:
  selector:
    app: subtrack
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
